# rppal_mfrc522

./: .gitignore  Cargo.toml  Cross.toml  Justfile  README.md  coverage.json  version.json5
.devcontainer/: Dockerfile  devcontainer.json
benches/: benchmarks.rs
scripts/: deploy_tool.fish
src/: cancellation_token.rs  lib.rs  log_macros.rs  mfrc522.rs  picc.rs  register.rs
