[package]
name = "rppal_mfrc522"
version = "0.1.0"
edition = "2021"
authors = ["John Lyon-Smith <john@escapegallery.net>"]
description = "MFRC522 SPI based reader using the rppal crate"
repository = "https://github.com/jlyonsmith/rppal_mfrc522"
readme = "README.md"
keywords = []
categories = []
license = "Unlicense"

[dependencies]
anyhow = "1.0.86"
bitflags = "2.9.0"
clap = { version = "4.5", features = ["derive", "env"] }
lazy_static = "1.5"
rppal = "0.22"
thiserror = "2.0"
yansi = "1.0"

[dev-dependencies]
criterion = "^0.5"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "mfrc522"
path = "src/bin/rppal_mfrc522.rs"
