[package]
name = "rppal_mfrc522"
version = "0.2.0"
edition = "2021"
authors = ["John Lyon-Smith <john@escapegallery.net>"]
description = "MFRC522 interface crate using the rppal crate and SPI"
repository = "https://github.com/jlyonsmith/rppal_mfrc522"
readme = "README.md"
keywords = []
categories = []
license = "Unlicense"

[dependencies]
anyhow = "1.0.86"
bitflags = "2.9.0"
clap = { version = "4.5", features = ["derive", "env"] }
ctrlc = "3.4.7"
rppal = "0.22"
simple_cancelation_token = "0.0.1"
termion = "4.0.5"
thiserror = "2.0"

[dev-dependencies]

[[bin]]
name = "mfrc522"
path = "src/bin/rppal_mfrc522.rs"
